--- a/Registration Form/index.html
+++ b/Registration Form/index.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Registration Form</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="box">
+        <h1><u>Student Registration Form</u></h1>
+        <div class="container">
+            <div class="form">
+                <h2>Form</h2>
+                <form>
+                    <div class="name">
+                        <label for="name">Name :</label>
+                        <input type="text" id="name" placeholder="ex.xyz" required>
+                    </div>
+                    <div class="email">
+                        <label for="email">Email :</label>
+                        <input type="email" id="email" placeholder="ex. abc@xyz.com" required>
+                    </div>
+                    <div class="website">
+                        <label for="website">Website :</label>
+                        <input type="url" id="website" placeholder="ex. xyz.com" required>
+                    </div>
+                    <div class="image">
+                        <label for="url">Image URL: <span>(jpg,png etc.format)</span></label>
+                        <input type="url" id="url" placeholder="ex. https://xyz.jpg"
+                            value="https://st.depositphotos.com/2101611/3923/v/450/depositphotos_39238767-stock-illustration-businessman-avatar-profile-picture.jpg"
+                            required>
+                    </div>
+                    <div class="gender">
+                        <label for="gender">Gender: </label>
+                        <input type="radio" name="male-female" id="male" value="Male">Male
+                        <input type="radio" name="male-female" id="female" value="Female">Female
+                    </div>
+                    <div class="skills">
+                        <label for="skills">Skills :</label>
+                        <input type="checkbox" value="C++" id="cpp" class="checkbox">C++
+                        <input type="checkbox" value="C" id="c" class="checkbox">C
+                        <input type="checkbox" value="HTML" id="html" class="checkbox">HTML
+                        <input type="checkbox" value="CSS" id="css" class="checkbox">CSS
+                    </div>
+                    <div class="button">
+                        <button type="button" id="submit">Submit</button>
+                        <button type="reset">Reset</button>
+                    </div>
+                </form>
+            </div>
+            <div class="output">
+                <h2>Student Details</h2>
+                <div class="cardContainer" id="cardContainer">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+
+</html>
